# la

./: .clang-format  CMakeLists.txt  README.md  la.cppm  la.hpp  main.cpp
cmake/: laConfig.cmake
